# master-restapi

./: README.md  main.py  pyproject.toml
socialmediaapi/: main.py
socialmediaapi/models/: post.py
socialmediaapi/routers/: post.py
socialmediaapi/test/: conftest.py  simple_test.py
socialmediaapi/test/routers/: test_post.py
